Add strict line breaks rule

--- a/config.yaml
+++ b/config.yaml
@@ -39,3 +39,5 @@ html_output_folder_path_str: '/home/inom/Projects/main/wiki_html/docs'
 # Extra information is written to this folder
 log_output_folder_path_str: '/home/inom/Projects/main/wiki_html/output/log'
 
+toggles:
+  strict_line_breaks: true
