change default styling

--- a/config.yaml
+++ b/config.yaml
@@ -42,6 +42,9 @@ log_output_folder_path_str: '/home/inom/Projects/main/wiki_html/output/log'
 toggles:
   strict_line_breaks: true
 
+  features:
+    styling:
+      layout: tabs
 
 # Will be inputted into the Html template as page title
 # Not used anywhere else atm.
