--- a/config.yaml
+++ b/config.yaml
@@ -50,7 +50,7 @@ toggles:
 
     side_pane:              # only valid for documentation layout
       left_pane:
-        enabled: True
+        enabled: False
 
       right_pane:
         enabled: False
