--- a/papis/f856cc0707174ccad0ea63c2b9fdcf3f-chuck-dr.-and-kerni/info.yaml
+++ b/papis/f856cc0707174ccad0ea63c2b9fdcf3f-chuck-dr.-and-kerni/info.yaml
@@ -53,7 +53,7 @@ author_list:
 files: []
 keywords: \#nosource, active
 month: August
-note:
+note: notes.md
 BookUrl: https://www.cc4e.com/book/
 papis_id: aedf5594f01128e0fee73ed104e0e15b
 ref: LearnCProgramChuck2022
