Remove old notes

--- a/papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/info.yaml
+++ b/papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/info.yaml
@@ -5,8 +5,7 @@ author_list:
 - family: Muratori
   given: Casey
 file: '@CaseyMuratoriHandmadeHero2014.md:/home/inom/Projects/main/wiki/@CaseyMuratoriHandmadeHero2014.md:text/markdown'
-files:
-- caseymuratorihandmadehero2014.md
+files: []
 keywords: active
 language: en-US
 papis_id: dc3b6747efe7241af77d1647d7ec4327
