--- a/papis/f93f049d83799c8a193d1eec12858aa1-batchelder-pycon-2/info.yaml
+++ b/papis/f93f049d83799c8a193d1eec12858aa1-batchelder-pycon-2/info.yaml
@@ -11,8 +11,7 @@ author_list:
 - family: Batchelder)
   given: PyCon 2014 (Ned
 file: '@PyCon2014NedBatchelderGetting2014.md:/home/inom/Projects/main/wiki/@PyCon2014NedBatchelderGetting2014.md:text/x-markdown'
-files:
-- pycon2014nedbatcheldergetting2014.md
+files: []
 keywords: active
 month: April
 papis_id: 3c2310195853a1064dfc13678dd9b835
