--- a/papis/5788633053624830c21f8c4524ff5b13/info.yaml
+++ b/papis/5788633053624830c21f8c4524ff5b13/info.yaml
@@ -2,19 +2,20 @@ abstract: We've partnered with Dartmouth college professors Tom Cormen and Devin
   to teach introductory computer science algorithms, including searching, sorting,
   recursion, and graph theory. Learn with a combination of articles, visualizations,
   quizzes, and coding challenges.
+author:
+  MIT: null
 file: '@AlgorithmsComputerScience2005.md:/home/inom/Projects/main/wiki/@AlgorithmsComputerScience2005.md:text/x-markdown;2005-Algorithms_Computer_science_Computing.html:/home/inom/Projects/main/wiki/books/Computer
   Science/2005-Algorithms_Computer_science_Computing.html:text/html'
 files:
-- algorithmscomputerscience2005.md
 - 2005-algorithms-computer-science-computing-a.html
 journal: Khan Academy
 keywords: active
 language: en
+notes: notes.md
 papis_id: b657ddd32c314d7bf470df18af05a646
 ref: AlgorithmsTex2005
-title: Algorithms \textbar Computer science \textbar Computing
+title: Algorithms - Computer science
 type: misc
 url: https://www.khanacademy.org/computing/computer-science/algorithms
 urldate: '2023-03-18'
 year: '2005'
-author: {MIT}
