Remove old notes/add new

--- a/papis/882dd7e427ed785b79bc28335be19693-loomis-andrew/info.yaml
+++ b/papis/882dd7e427ed785b79bc28335be19693-loomis-andrew/info.yaml
@@ -19,6 +19,7 @@ files:
 isbn: 978-0-85768-760-9
 keywords: active, drawing
 language: english
+notes: notes.md
 papis_id: e6d680c81011c619dd0b9705816bd5e8
 publisher: Titan Books
 ref: FunWithAPencLoomis2013
