--- a/papis/731393c6e40c6bdd44b8170acef82a62-van-gumster-jason/info.yaml
+++ b/papis/731393c6e40c6bdd44b8170acef82a62-van-gumster-jason/info.yaml
@@ -19,6 +19,7 @@ files:
 - jason-van-gumster-2020-blender-r-for-dummies-4th-edition-a.pdf
 isbn: 978-1-119-61696-2
 keywords: active
+notes: notes.md
 papis_id: a7a5c8f9babce64dfa2391b9e9d533cd
 publisher: John Wiley and Sons
 ref: BlenderRForDuVanGu2020
