--- a/papis/d6ecfc65bb43da6336f0d6593071cbd8-hunt-andrew-and-tho/info.yaml
+++ b/papis/d6ecfc65bb43da6336f0d6593071cbd8-hunt-andrew-and-tho/info.yaml
@@ -42,6 +42,7 @@ files:
 isbn: 978-0-13-595697-7
 keywords: active
 language: en
+notes: notes.md
 papis_id: 91f551248fb3fa1615df053eaffdd2a4
 publisher: Addison-Wesley Professional
 ref: ThePragmaticPHunt2019
