--- a/papis/7f8d984537ec14ac5cd5432d44facea8-slatkin-brett/info.yaml
+++ b/papis/7f8d984537ec14ac5cd5432d44facea8-slatkin-brett/info.yaml
@@ -34,6 +34,7 @@ files:
 isbn: 978-0-13-485398-7
 keywords: active, python
 language: english
+notes: notes.md
 papis_id: d8b8c7691622ac6569f987a298317fe1
 publisher: Addison-Wesley
 ref: EffectivePythoSlatki2020
