--- a/papis/99798ea3067ec2618000d574b97bf955-aleksandr-emelin/info.yaml
+++ b/papis/99798ea3067ec2618000d574b97bf955-aleksandr-emelin/info.yaml
@@ -8,6 +8,7 @@ files:
 - emelin-aleksandr-kratchaishii-kurs-shkolnoi-matematiki-a.pdf
 keywords: active, general math
 month: August
+notes: notes.md
 papis_id: 4f7bc21c8715e49f82d772e11d8d2dfc
 ref: KratchaishiiKursAleksa2021
 title: Кратчайший курс школьной математики
