--- a/papis/af1e94df98f63aa42a732c48bb7d5176-david-kilpatrick/info.yaml
+++ b/papis/af1e94df98f63aa42a732c48bb7d5176-david-kilpatrick/info.yaml
@@ -17,6 +17,7 @@ files:
 isbn: 978-5-03-001282-7
 keywords: active, photography
 language: russian
+notes: notes.md
 papis_id: 5ca031165592a17245e5341f810469cf
 ref: SvetIOsveshcheniDavid1988
 title: Свет и освещение
