--- a/papis/55e4c3a7646b701da66038d1ed63326b-matthes-eric/info.yaml
+++ b/papis/55e4c3a7646b701da66038d1ed63326b-matthes-eric/info.yaml
@@ -33,6 +33,7 @@ keywords: active, python
 language: en
 month: January
 note: 'Google-Books-ID: qD1wEAAAQBAJ'
+notes: notes.md
 papis_id: edfca3c8b59bfdb91acd6fb960408fa6
 publisher: No Starch Press
 ref: PythonCrashCoMatthe2023
