--- a/papis/0a96b011624a27630b92896fb6c7b31b-flanagan-david/info.yaml
+++ b/papis/0a96b011624a27630b92896fb6c7b31b-flanagan-david/info.yaml
@@ -25,6 +25,7 @@ files:
 - david-flanagan-2020-javascript-the-definitive-guide-master-the-world-s-most-used-programming.pdf
 isbn: 978-1-4919-5202-3
 keywords: active, javascript, object-oriented
+notes: notes.md
 papis_id: 09f6d457808a7dce186aa322707a5d13
 publisher: O'Reilly Media, Inc
 ref: JavascriptTheFlanag2020
