--- a/papis/bdcf7cd50c6dc8a18320d0c05b44affe-ramalho-luciano/info.yaml
+++ b/papis/bdcf7cd50c6dc8a18320d0c05b44affe-ramalho-luciano/info.yaml
@@ -28,6 +28,7 @@ files:
 - luciano-ramalho-2021-fluent-python-a.pdf
 isbn: 978-1-4920-5628-7
 keywords: active, object-oriented, python
+notes: notes.md
 papis_id: 853230b9445655572cdb9038ad234b2c
 publisher: O'Reilly
 ref: FluentPythonRamalh2021
