--- a/papis/5a531e96f3b3b978f489ce0cf6e84b26-cormen-thomas-h./info.yaml
+++ b/papis/5a531e96f3b3b978f489ce0cf6e84b26-cormen-thomas-h./info.yaml
@@ -28,6 +28,7 @@ files:
 - thomas-h.-cormen-2013-algorithms-unlocked-a.pdf
 isbn: 978-0-262-51880-2
 keywords: active, algorithms
+notes: notes.md
 papis_id: 010e558fc11f752d4137e9d78cddf473
 publisher: The MIT Press
 ref: AlgorithmsUnloCormen2013
