--- a/papis/2ef118ce3473c9fe93acfc371e3f736e-wengrow-jay/info.yaml
+++ b/papis/2ef118ce3473c9fe93acfc371e3f736e-wengrow-jay/info.yaml
@@ -34,6 +34,7 @@ isbn: 978-1-68050-722-5
 keywords: active, algorithms
 language: en
 note: 'Google-Books-ID: SKX5ygEACAAJ'
+notes: notes.md
 papis_id: 6ae98031eac7030fb26c525984ff697d
 publisher: Pragmatic Bookshelf
 ref: ACommonSenseWengro2020
