--- a/papis/9f35f927bf07ed1740edd928505fefcf-cormen-thomas-h.-an/info.yaml
+++ b/papis/9f35f927bf07ed1740edd928505fefcf-cormen-thomas-h.-an/info.yaml
@@ -20,6 +20,7 @@ files:
 - thomas-h.-cormen-et-al-2022-introduction-to-algorithms-b.pdf
 isbn: 978-0-262-04630-5
 keywords: active, algorithms, L2, math
+notes: notes.md
 papis_id: 02494e6e682485d365dfb0b51416eb8f
 publisher: The MIT Press
 ref: IntroductionToCormen2022
