--- a/papis/2f5f35f6a9f0bf0c8b514e6c119de480-petzold-charles/info.yaml
+++ b/papis/2f5f35f6a9f0bf0c8b514e6c119de480-petzold-charles/info.yaml
@@ -22,6 +22,7 @@ files:
 isbn: 978-0-7356-1131-3 978-0-7356-0505-3
 keywords: active, skills
 language: english
+notes: notes.md
 papis_id: 608be9ee063e03f036fbd3c2b0c1d652
 publisher: Microsoft Press
 ref: CodeTheHiddePetzol2000
