--- a/papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/info.yaml
+++ b/papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/info.yaml
@@ -8,6 +8,7 @@ file: '@CaseyMuratoriHandmadeHero2014.md:/home/inom/Projects/main/wiki/@CaseyMur
 files: []
 keywords: active
 language: en-US
+notes: notes.md
 papis_id: dc3b6747efe7241af77d1647d7ec4327
 ref: HandmadeHeroMurato2014
 title: Handmade Hero
