--- a/papis/2aaba9c8a111b0a808fc70c0f23bc787-stoliarov-andrei-vik/info.yaml
+++ b/papis/2aaba9c8a111b0a808fc70c0f23bc787-stoliarov-andrei-vik/info.yaml
@@ -7,6 +7,7 @@ files:
 - andrei-viktorovich-stoliarov-2021-programmirovanie-vvedenie-v-professiiu-azy-programmirovaniia-tom-1.pdf
 isbn: 978-5-317-06573-7
 keywords: active
+notes: notes.md
 papis_id: c04c42194edffb75536681f19e8280a6
 ref: ProgrammirovaniStoliar2021
 title: Программирование - Введение в профессию_Азы программирования - том 1.
