--- a/papis/e614d794116031133f68747001d0e912-kiselyov-andrei-pet/info.yaml
+++ b/papis/e614d794116031133f68747001d0e912-kiselyov-andrei-pet/info.yaml
@@ -27,6 +27,7 @@ file: Andrei_Petrovich_Kiselyov-1928-Элементы_алгебры_и_анал
 files:
 - andrei-petrovich-kiselyov-1928-elementy-algebry-i-analiza-chast-1.pdf
 keywords: active
+notes: notes.md
 papis_id: e1b65a2db6af447838daa05fde31e1a8
 ref: ElementyAlgebrKisely1928
 title: Элементы алгебры и анализа, часть 1
