--- a/papis/f93f049d83799c8a193d1eec12858aa1-batchelder-pycon-2/info.yaml
+++ b/papis/f93f049d83799c8a193d1eec12858aa1-batchelder-pycon-2/info.yaml
@@ -14,6 +14,7 @@ file: '@PyCon2014NedBatchelderGetting2014.md:/home/inom/Projects/main/wiki/@PyCo
 files: []
 keywords: active
 month: April
+notes: notes.md
 papis_id: 3c2310195853a1064dfc13678dd9b835
 ref: GettingStartedBatche2014
 shorttitle: Ned {Batchelder}
