--- a/papis/af1e94df98f63aa42a732c48bb7d5176-david-kilpatrick/info.yaml
+++ b/papis/af1e94df98f63aa42a732c48bb7d5176-david-kilpatrick/info.yaml
@@ -14,6 +14,7 @@ file: '@KilpatrickDavidSvetOsveshchenie1988.md:/home/inom/Projects/main/wiki/con
   and Design/Kilpatrick_David-1988-Свет_и_освещение.pdf:application/pdf'
 files:
 - kilpatrick-david-1988-svet-i-osveshchenie.pdf
+- avidreaders.ru-svet-i-osveschenie-b.epub
 isbn: 978-5-03-001282-7
 keywords: active, photography
 language: russian
