Update papis library

--- a/papis/1ac2e1a756753ace397543a1a7dc255f/info.yaml
+++ b/papis/1ac2e1a756753ace397543a1a7dc255f/info.yaml
@@ -8,6 +8,7 @@ notes: notes.md
 papis_id: c435bc4aec58297adcffa6c09b00bbcc
 ref: HarvardxCs50x2023
 title: HarvardX CS50x
+shorttitle: HarvardX CS50x
 type: misc
 url: https://learning.edx.org/course/course-v1:HarvardX+CS50+X/home
 urldate: '2023-03-11'
