--- a/papis/1ae149d1c843b867b0b254a20df34b4f-neil-drew/info.yaml
+++ b/papis/1ae149d1c843b867b0b254a20df34b4f-neil-drew/info.yaml
@@ -16,5 +16,6 @@ ref: PracticalVimNeil2015
 series: The pragmatic programmers
 shorttitle: Practical {Vim}
 title: 'Practical Vim: Edit text at the speed of thought'
+shorttitle: 'Practical Vim'
 type: book
 year: '2015'
