--- a/papis/1b4427615712d0b378ddd57fc518f0d2-kiselyov-andrei-pet/info.yaml
+++ b/papis/1b4427615712d0b378ddd57fc518f0d2-kiselyov-andrei-pet/info.yaml
@@ -22,7 +22,8 @@ files:
 keywords: active
 papis_id: f5dc89b5c6be632eb6800b11a7e96639
 ref: ElementyAlgebrKisely1928v2
-title: Элементы алгебры и анализа, часть 2
+title: 'Элементы алгебры и анализа, часть 2'
+shorttitle: 'Элементы алгебры и анализа, часть 2'
 type: book
 volume: '1'
 year: '1928'
