--- a/papis/2a1c6a54060a4d05a0cf5d547f0c6c69-duhigg-charles/info.yaml
+++ b/papis/2a1c6a54060a4d05a0cf5d547f0c6c69-duhigg-charles/info.yaml
@@ -14,7 +14,7 @@ month: January
 papis_id: 0f43ff347b9bc526c1bff02bd24fff9b
 publisher: Random House Trade Paperbacks
 ref: ThePowerOfHaDuhigg2014
-shorttitle: The {Power} of {Habit}
+shorttitle: The Power of Habit
 title: 'The Power of Habit: Why We Do What We Do in Life and Business'
 type: book
 year: '2014'
