--- a/papis/2aaba9c8a111b0a808fc70c0f23bc787-stoliarov-andrei-vik/info.yaml
+++ b/papis/2aaba9c8a111b0a808fc70c0f23bc787-stoliarov-andrei-vik/info.yaml
@@ -11,5 +11,6 @@ notes: notes.md
 papis_id: c04c42194edffb75536681f19e8280a6
 ref: ProgrammirovaniStoliar2021
 title: Программирование - Введение в профессию_Азы программирования - том 1.
+shorttitle: Программирование - том 1
 type: book
 year: '2021'
