--- a/papis/2f5f35f6a9f0bf0c8b514e6c119de480-petzold-charles/info.yaml
+++ b/papis/2f5f35f6a9f0bf0c8b514e6c119de480-petzold-charles/info.yaml
@@ -26,7 +26,7 @@ notes: notes.md
 papis_id: 608be9ee063e03f036fbd3c2b0c1d652
 publisher: Microsoft Press
 ref: CodeTheHiddePetzol2000
-shorttitle: Code
 title: 'Code: The hidden language of computer hardware and software'
+shorttitle: 'Code: The hidden language'
 type: book
 year: '2000'
