--- a/papis/315c92066071c34465a13ed21a22f8e4-chacon-scott-and-st/info.yaml
+++ b/papis/315c92066071c34465a13ed21a22f8e4-chacon-scott-and-st/info.yaml
@@ -27,6 +27,7 @@ publisher: Apress
 ref: ProGitChacon2022
 series: The expert's voice in software development
 title: Pro Git
+shorttitle: Pro Git
 type: book
 url: https://git-scm.com/book/en/v2
 year: '2022'
