--- a/papis/335bfb55622213d55f30dfdd8fed11e3/info.yaml
+++ b/papis/335bfb55622213d55f30dfdd8fed11e3/info.yaml
@@ -8,5 +8,7 @@ papis_id: 797b3014480ee0009c55cc6661961ed4
 ref: DebuggingInNe
 time-added: 2023-06-05-20:51:30
 title: Debugging In Neovim (ft BashBunni)
+shorttitle: Debugging In Neovim
 type: video.other
 url: https://www.youtube.com/watch?v=0moS8UHupGc
+year: 2023
