--- a/papis/3361851cb6dd2b558516aa7dbbec22a3-simpson-kyle/info.yaml
+++ b/papis/3361851cb6dd2b558516aa7dbbec22a3-simpson-kyle/info.yaml
@@ -22,7 +22,8 @@ papis_id: bc533f95440ecc514636e570f4824591
 publisher: GetiPub \& Leanpub
 ref: YouDonTKnowSimpso2020
 series: You don't know {JS} yet
-title: 'You don''t know JS yet: Get started'
+title: 'You dont know JS yet, Get started'
+shorttitle: 'You dont know JS yet'
 type: book
 volume: '1'
 year: '2020'
