--- a/papis/363384255e27cb01da66bcc3c1b094c4-hodgson-jonathan/info.yaml
+++ b/papis/363384255e27cb01da66bcc3c1b094c4-hodgson-jonathan/info.yaml
@@ -12,6 +12,7 @@ month: May
 papis_id: 0db94c2af111d2b12e9f8fae9bf3a6ca
 ref: MyEmailSetupHodgso2020
 title: My Email Setup using Mutt and Vim
+shorttitle: Mutt setup
 type: misc
 url: https://jonathanh.co.uk/blog/mutt-setup/
 urldate: '2023-02-22'
