--- a/papis/3846141cf23705c27b9c891a33e73435-irianto-igor/info.yaml
+++ b/papis/3846141cf23705c27b9c891a33e73435-irianto-igor/info.yaml
@@ -14,6 +14,7 @@ notes: notes.md
 papis_id: 0f708186d06919d53e589cf45d0e4cd4
 ref: LearnVimIriant2021
 title: Learn Vim
+shorttitle: Learn Vim
 type: misc
 url: https://learnvim.irian.to
 urldate: '2023-03-19'
