--- a/papis/461fe2de09728cedd0ffc1e11df45147-kiselyov-andrei-pet/info.yaml
+++ b/papis/461fe2de09728cedd0ffc1e11df45147-kiselyov-andrei-pet/info.yaml
@@ -17,5 +17,6 @@ keywords: active, math
 papis_id: 5a148133dd083b85c42f33d0683c1434
 ref: AlgebraChastKisely2005
 title: Алгебра, часть 2
+shorttitle: Алгебра, часть 2
 type: book
 year: '2005'
