--- a/papis/505c32d08100392d3516ea399bc64822-kiselyov-andrei-pet/info.yaml
+++ b/papis/505c32d08100392d3516ea399bc64822-kiselyov-andrei-pet/info.yaml
@@ -17,5 +17,6 @@ language: 5-9221-0676-7
 papis_id: 7cb85a49ede96533f49c2c0c94d2c24f
 ref: AlgebraChastKisely2006
 title: Алгебра, часть 1
+shorttitle: Алгебра, часть 1
 type: book
 year: '2006'
