--- a/papis/52c8859d16c3abad9b007a2973437205-svoren-rudol-f/info.yaml
+++ b/papis/52c8859d16c3abad9b007a2973437205-svoren-rudol-f/info.yaml
@@ -22,5 +22,6 @@ keywords: active, electronics
 papis_id: 55ec18fd205c5733e02605cab69f23fe
 ref: ElektronikaShagSvoren2020
 title: Электроника шаг за шагом
+shorttitle: Электроника шаг за шагом
 type: book
 year: '2020'
