--- a/papis/5407acbb47be9d2e1779bad9919bafda-petzold-charles/info.yaml
+++ b/papis/5407acbb47be9d2e1779bad9919bafda-petzold-charles/info.yaml
@@ -28,5 +28,6 @@ ref: TheAnnotatedTPetzol2008
 shorttitle: The annotated {Turing}
 title: 'The annotated Turing: A guided tour through Alan Turing''s historic paper
   on computability and the Turing machine'
+shorttitle: 'The annotated Turing'
 type: book
 year: '2008'
