--- a/papis/55e4c3a7646b701da66038d1ed63326b-matthes-eric/info.yaml
+++ b/papis/55e4c3a7646b701da66038d1ed63326b-matthes-eric/info.yaml
@@ -37,7 +37,7 @@ notes: notes.md
 papis_id: edfca3c8b59bfdb91acd6fb960408fa6
 publisher: No Starch Press
 ref: PythonCrashCoMatthe2023
-shorttitle: Python {Crash} {Course}, 3rd {Edition}
+shorttitle: Python Crash Course
 title: Python Crash Course
 type: book
 year: '2023'
