--- a/papis/565ac38b0308f81f8e5d56531b080051-maro-publius-vergil/info.yaml
+++ b/papis/565ac38b0308f81f8e5d56531b080051-maro-publius-vergil/info.yaml
@@ -21,6 +21,7 @@ ref: GomerIliadaMaro1989
 series: Библиотека мировой литературы для детей
 title: Гомер. Илиада. Одиссея. Вергилий. Энеида. Песнь О роланде. Данте. Божественная
   комедия
+shorttitle: Гомер. Илиада. и др.
 type: book
 volume: Том 31
 year: '1989'
