--- a/papis/5936b08f8c4d30c8b99e13f43ebb60a8-mcconnell-steve/info.yaml
+++ b/papis/5936b08f8c4d30c8b99e13f43ebb60a8-mcconnell-steve/info.yaml
@@ -31,5 +31,6 @@ papis_id: 8fefe1884943ba7d3b175fea6a89ec6b
 publisher: Microsoft Press
 ref: CodeCompleteMcconn2004
 title: Code complete
+shorttitle: Code complete
 type: book
 year: '2004'
