--- a/papis/5a531e96f3b3b978f489ce0cf6e84b26-cormen-thomas-h./info.yaml
+++ b/papis/5a531e96f3b3b978f489ce0cf6e84b26-cormen-thomas-h./info.yaml
@@ -33,5 +33,6 @@ papis_id: 010e558fc11f752d4137e9d78cddf473
 publisher: The MIT Press
 ref: AlgorithmsUnloCormen2013
 title: Algorithms unlocked
+shorttitle: Algorithms unlocked
 type: book
 year: '2013'
