--- a/papis/6986f9c88585f32d4acde8f0dbb6ec93-kiselyov-andrei-pet/info.yaml
+++ b/papis/6986f9c88585f32d4acde8f0dbb6ec93-kiselyov-andrei-pet/info.yaml
@@ -21,6 +21,7 @@ isbn: 978-5-397-01640-7
 keywords: active
 papis_id: f370f7a248af92a4acb7162fcc1e4cfb
 ref: ZadachiIUprazhnKisely2011
-title: Задачи и упражнения к "Элементам Алгебры"
+title: 'Задачи и упражнения к "Элементам Алгебры"'
+shorttitle: 'Задачи и упражнения к "Элементам Алгебры"'
 type: book
 year: '2011'
