--- a/papis/6f4cd97a258ac7dc7cdc966fdbcdb2bc/info.yaml
+++ b/papis/6f4cd97a258ac7dc7cdc966fdbcdb2bc/info.yaml
@@ -6,5 +6,8 @@ papis_id: 7268eb0627d49a2ac61506410cc8bc34
 ref: HowToType100
 time-added: 2023-06-02-01:13:23
 title: How to type 100 words per minute
+shorttitle: How to type fast
 type: article
 url: https://roosterdan.medium.com/how-to-type-100-words-per-minute-a780fd80fd27
+year: 2020
+author: Dan
