--- a/papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/info.yaml
+++ b/papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/info.yaml
@@ -12,6 +12,7 @@ notes: notes.md
 papis_id: dc3b6747efe7241af77d1647d7ec4327
 ref: HandmadeHeroMurato2014
 title: Handmade Hero
+shorttitle: Handmade Hero
 type: misc
 url: https://hero.handmade.network/episode/code
 urldate: '2023-03-02'
