--- a/papis/731393c6e40c6bdd44b8170acef82a62-van-gumster-jason/info.yaml
+++ b/papis/731393c6e40c6bdd44b8170acef82a62-van-gumster-jason/info.yaml
@@ -24,5 +24,6 @@ papis_id: a7a5c8f9babce64dfa2391b9e9d533cd
 publisher: John Wiley and Sons
 ref: BlenderRForDuVanGu2020
 title: Blender® for dummies, 4th edition
+shorttitle: Blender for dummies
 type: book
 year: '2020'
