--- a/papis/74b5d9ce4b6ffcf86eaf9484220a6ab5/info.yaml
+++ b/papis/74b5d9ce4b6ffcf86eaf9484220a6ab5/info.yaml
@@ -7,5 +7,7 @@ papis_id: 920bd8c45f2c597d4bd235f53c2d55d8
 ref: ThePythonStan
 time-added: 2023-06-02-01:25:46
 title: The Python Standard Library
+shorttitle: The Python stdlib
 type: website
 url: https://docs.python.org/3/library/index.html
+year: 2023
