--- a/papis/7c88e249d78e02c8ef9c49688368a30a-sedgewick-robert-an/info.yaml
+++ b/papis/7c88e249d78e02c8ef9c49688368a30a-sedgewick-robert-an/info.yaml
@@ -42,6 +42,7 @@ papis_id: 7eac27ddfc34e469371ef53f92ae9a1b
 publisher: Addison-Wesley Professional
 ref: AlgorithmsParSedgew2014
 title: 'Algorithms: Part II'
+shorttitle: 'Algorithms: Part II'
 type: book
 volume: '1'
 year: '2014'
