--- a/papis/7e51835c344a4a2b45c7aaf47b3720b2-knuth-donald-ervin/info.yaml
+++ b/papis/7e51835c344a4a2b45c7aaf47b3720b2-knuth-donald-ervin/info.yaml
@@ -26,5 +26,6 @@ keywords: active, discrete math, math
 papis_id: 6658262a172547faa93814689ae4e127
 ref: KonkretnaiaMateKnuth1998
 title: Конкретная математика. Основание информатики
+shorttitle: Конкретная математика
 type: book
 year: '1998'
