--- a/papis/7f8d984537ec14ac5cd5432d44facea8-slatkin-brett/info.yaml
+++ b/papis/7f8d984537ec14ac5cd5432d44facea8-slatkin-brett/info.yaml
@@ -39,7 +39,7 @@ papis_id: d8b8c7691622ac6569f987a298317fe1
 publisher: Addison-Wesley
 ref: EffectivePythoSlatki2020
 series: Effective software development series
-shorttitle: Effective {Python}
 title: 'Effective Python: 90 specific ways to write better python'
+shorttitle: Effective Python
 type: book
 year: '2020'
