--- a/papis/82951c75090ce154272484448309812b-neil-drew/info.yaml
+++ b/papis/82951c75090ce154272484448309812b-neil-drew/info.yaml
@@ -15,5 +15,6 @@ ref: ModernVimCraNeil2018
 series: The {Pragmatic} {Programmers}
 shorttitle: Modern {Vim}
 title: 'Modern Vim: Craft your development environment with Vim 8 and Neovim'
+shorttitle: 'Modern Vim'
 type: book
 year: '2018'
