--- a/papis/86432bae1f78f6d3026fefe85c7c89f6-greenfeld-daniel-ro/info.yaml
+++ b/papis/86432bae1f78f6d3026fefe85c7c89f6-greenfeld-daniel-ro/info.yaml
@@ -23,5 +23,6 @@ publisher: Two Scoops Press
 ref: TwoScoopsOfDGreenf2015
 shorttitle: Two scoops of {Django}
 title: 'Two scoops of Django: Best practices for Django 1.8'
+shorttitle: 'Two scoops of Django'
 type: book
 year: '2015'
