--- a/papis/882dd7e427ed785b79bc28335be19693-loomis-andrew/info.yaml
+++ b/papis/882dd7e427ed785b79bc28335be19693-loomis-andrew/info.yaml
@@ -25,5 +25,6 @@ publisher: Titan Books
 ref: FunWithAPencLoomis2013
 shorttitle: Fun {With} {A} {Pencil}
 title: 'Fun With A Pencil: How Everybody Can Easily Learn to Draw'
+shorttitle: 'Fun With A Pencil'
 type: book
 year: '2013'
