--- a/papis/8b21a31555572c61f0deccc8e81080c8-ries-eric/info.yaml
+++ b/papis/8b21a31555572c61f0deccc8e81080c8-ries-eric/info.yaml
@@ -42,6 +42,8 @@ note: 'Length: 08:38
 papis_id: 096ae2b2bd2cd4b898de4b92b91890c8
 ref: TheLeanStartuRies
 title: The Lean Startup (audiobook)
+shorttitle: The Lean Startup
 type: book
 url: https://www.audible.com/pd/The-Lean-Startup-Audiobook/B005LXV0HI
 urldate: '2023-04-18'
+year: 2011
