--- a/papis/8e080a939e8f3929a129f88699ab6646-sedgewick-robert-an/info.yaml
+++ b/papis/8e080a939e8f3929a129f88699ab6646-sedgewick-robert-an/info.yaml
@@ -42,7 +42,7 @@ notes: notes.md
 papis_id: 425cb3ed48253d8c094ea27f66061093
 publisher: Addison-Wesley Professional
 ref: AlgorithmsParSedgew2014a
-shorttitle: Algorithms
+shorttitle: 'Algorithms: Part I'
 title: 'Algorithms: Part I'
 type: book
 volume: '2'
