--- a/papis/8ecef673d022a64fa157582beac5edde-petzold-charles/info.yaml
+++ b/papis/8ecef673d022a64fa157582beac5edde-petzold-charles/info.yaml
@@ -25,5 +25,6 @@ keywords: active, computers
 papis_id: f7dee9f1ac6b7c74d324c51501f0fdf8
 ref: KodTainyiIazyPetzol2019
 title: 'Код: Тайный язык информатики'
+shorttitle: 'Код: Тайный язык информатики'
 type: book
 year: '2019'
