--- a/papis/99798ea3067ec2618000d574b97bf955-aleksandr-emelin/info.yaml
+++ b/papis/99798ea3067ec2618000d574b97bf955-aleksandr-emelin/info.yaml
@@ -12,6 +12,7 @@ notes: notes.md
 papis_id: 4f7bc21c8715e49f82d772e11d8d2dfc
 ref: KratchaishiiKursAleksa2021
 title: Кратчайший курс школьной математики
+shorttitle: Кратчайший курс школьной математики
 type: book
 url: https://mathter.pro/pesochnica/index.html
 urldate: '2022-12-30'
