--- a/papis/9c1f9ae59c3e81a754843a6c820644c8-verou-lea/info.yaml
+++ b/papis/9c1f9ae59c3e81a754843a6c820644c8-verou-lea/info.yaml
@@ -23,5 +23,6 @@ publisher: O'Reilly Media, Inc
 ref: CssSecretsBeVerou2015
 shorttitle: '{CSS} secrets'
 title: 'CSS secrets: Better solutions to everyday web design problems'
+shorttitle: 'CSS secrets'
 type: book
 year: '2015'
