--- a/papis/9c8a1a90d37c313ce0809814e3c99f82-kernighan-brian-w./info.yaml
+++ b/papis/9c8a1a90d37c313ce0809814e3c99f82-kernighan-brian-w./info.yaml
@@ -21,5 +21,6 @@ papis_id: fe5ec8d43a2cd76433c105d411fab6ac
 publisher: Prentice Hall
 ref: TheCProgrammiKernig1988
 title: The C programming language
+shorttitle: The C programming language
 type: book
 year: '1988'
