--- a/papis/9f35f927bf07ed1740edd928505fefcf-cormen-thomas-h.-an/info.yaml
+++ b/papis/9f35f927bf07ed1740edd928505fefcf-cormen-thomas-h.-an/info.yaml
@@ -25,5 +25,6 @@ papis_id: 02494e6e682485d365dfb0b51416eb8f
 publisher: The MIT Press
 ref: IntroductionToCormen2022
 title: Introduction to algorithms
+shorttitle: Introduction to algorithms
 type: book
 year: '2022'
