--- a/papis/af1e94df98f63aa42a732c48bb7d5176-david-kilpatrick/info.yaml
+++ b/papis/af1e94df98f63aa42a732c48bb7d5176-david-kilpatrick/info.yaml
@@ -22,6 +22,7 @@ notes: notes.md
 papis_id: 5ca031165592a17245e5341f810469cf
 ref: SvetIOsveshcheniDavid1988
 title: Свет и освещение
+shorttitle: Свет и освещение
 type: book
 url: https://www.livelib.ru/book/1000690757-svet-i-osveschenie-devid-kilpatrik
 urldate: '2022-03-01'
