--- a/papis/bdcf7cd50c6dc8a18320d0c05b44affe-ramalho-luciano/info.yaml
+++ b/papis/bdcf7cd50c6dc8a18320d0c05b44affe-ramalho-luciano/info.yaml
@@ -33,5 +33,6 @@ papis_id: 853230b9445655572cdb9038ad234b2c
 publisher: O'Reilly
 ref: FluentPythonRamalh2021
 title: Fluent Python
+shorttitle: Fluent Python
 type: book
 year: '2021'
