--- a/papis/c5d2bcfcbeae9f04cdb3a55798a2ec8b-tanenbaum-andrew-s./info.yaml
+++ b/papis/c5d2bcfcbeae9f04cdb3a55798a2ec8b-tanenbaum-andrew-s./info.yaml
@@ -28,5 +28,6 @@ note: CitationKey:andrews.tanenbaumKompyuternyeSeti2012
 papis_id: 6828b32a0018c430afb131a13db8758f
 ref: KompiuternyeSeTanenb2012
 title: Компьютерные сети
+shorttitle: Компьютерные сети
 type: book
 year: '2012'
