--- a/papis/c771f17042efd4785d59b86771535801/info.yaml
+++ b/papis/c771f17042efd4785d59b86771535801/info.yaml
@@ -7,5 +7,8 @@ papis_id: 96989cf02efe98c30877de0d23edff4a
 ref: PythonFrequent
 time-added: 2023-06-02-01:23:49
 title: Python Frequently Asked Questions
+shorttitle: Python FAQ
 type: website
 url: https://docs.python.org/3/faq/index.html
+year: 2023
+autor: Official Python Documentation
