--- a/papis/c7b2c222bbf975affcc2f507fe2b6d61-kun-jeremy/info.yaml
+++ b/papis/c7b2c222bbf975affcc2f507fe2b6d61-kun-jeremy/info.yaml
@@ -25,7 +25,7 @@ language: en
 notes: notes.md
 papis_id: 9a6f6aa6693332d9ab25cd5d80ec8083
 ref: AProgrammerSKunJ2020
-shorttitle: A {Programmer}'s {Introduction} to {Mathematics}
+shorttitle: A Programmer's Introduction to Mathematics
 time-added: 2023-06-02-01:19:09
 title: 'A Programmer''s Introduction to Mathematics: Second Edition'
 type: book
