--- a/papis/c966a9e28f71532fd9f9deab6d69fb6c-lutz-mark/info.yaml
+++ b/papis/c966a9e28f71532fd9f9deab6d69fb6c-lutz-mark/info.yaml
@@ -37,5 +37,6 @@ papis_id: 3193d0f3857b43f14f7f7272de5d9c2d
 publisher: O'Reilly
 ref: LearningPythonLutz2013
 title: Learning Python
+shorttitle: Learning Python
 type: book
 year: '2013'
