--- a/papis/cabaaa6f4a9db5579cf0a55b65280e5d-palmer-austin/info.yaml
+++ b/papis/cabaaa6f4a9db5579cf0a55b65280e5d-palmer-austin/info.yaml
@@ -35,7 +35,7 @@ note: 'titleTranslation:
 papis_id: c453bb864bc22a1609bac7985a30ef6a
 publisher: Read Books Ltd
 ref: ThePalmerMethPalmer1934
-shorttitle: The {Palmer} {Method} of {Business} {Writing}
+shorttitle: The Palmer Method
 title: The Palmer Method of Business Writing
 type: book
 year: '1934'
