--- a/papis/d1f0f71576285091f575f2c449e97920/info.yaml
+++ b/papis/d1f0f71576285091f575f2c449e97920/info.yaml
@@ -34,3 +34,4 @@ ref: CleanCodeAH
 shorttitle: Clean code
 title: 'Clean code: A handbook of agile software craftsmanship (audiobook)'
 type: book
+year: 2008
