--- a/papis/e1ac24500d97af6ccabf3182239ef29e-wiedijk-freek/info.yaml
+++ b/papis/e1ac24500d97af6ccabf3182239ef29e-wiedijk-freek/info.yaml
@@ -15,5 +15,6 @@ language: en
 papis_id: 06efa437c0b07d60b3310056e1956333
 ref: ProgrammingLanWiedij2023
 title: Programming languages — C (draft 2023)
+shorttitle: C (draft 2023)
 type: article
 year: '2023'
