--- a/papis/e614d794116031133f68747001d0e912-kiselyov-andrei-pet/info.yaml
+++ b/papis/e614d794116031133f68747001d0e912-kiselyov-andrei-pet/info.yaml
@@ -30,6 +30,7 @@ keywords: active
 notes: notes.md
 papis_id: e1b65a2db6af447838daa05fde31e1a8
 ref: ElementyAlgebrKisely1928
-title: Элементы алгебры и анализа, часть 1
+title: 'Элементы алгебры и анализа, часть 1'
+shorttitle: 'Элементы алгебры и анализа, часть 1'
 type: book
 year: '1928'
