--- a/papis/f856cc0707174ccad0ea63c2b9fdcf3f-chuck-dr.-and-kerni/info.yaml
+++ b/papis/f856cc0707174ccad0ea63c2b9fdcf3f-chuck-dr.-and-kerni/info.yaml
@@ -58,6 +58,7 @@ BookUrl: https://www.cc4e.com/book/
 papis_id: aedf5594f01128e0fee73ed104e0e15b
 ref: LearnCProgramChuck2022
 title: Learn C Programming with Dr. Chuck (feat. classic book by Kernighan and Ritchie)
+shorttitle: Learn C Programming
 type: misc
 url: https://www.youtube.com/watch?v=j-_s8f5K30I
 urldate: '2023-05-04'
