--- a/papis/f93f049d83799c8a193d1eec12858aa1-batchelder-pycon-2/info.yaml
+++ b/papis/f93f049d83799c8a193d1eec12858aa1-batchelder-pycon-2/info.yaml
@@ -17,7 +17,7 @@ month: April
 notes: notes.md
 papis_id: 3c2310195853a1064dfc13678dd9b835
 ref: GettingStartedBatche2014
-shorttitle: Ned {Batchelder}
+shorttitle: Ned Batchelder
 title: Getting Started Testing - PyCon 2014
 type: misc
 url: https://www.youtube.com/watch?v=FxSsnHeWQBY
