--- a/papis/papis-zotero/info.yaml
+++ b/papis/papis-zotero/info.yaml
@@ -9,7 +9,8 @@ papis_id: c666a48e53c94ef1fc12920d806716d2
 programmingLanguage: Python
 ref: PapisPapisZot2023
 seeAlso: []
-tags: bibtex; publications; zotero; papers; crossref; scihub; papis
+shorttitle: papis/papis-zotero
+time-added: 2023-06-22-01:08:08
 title: papis/papis-zotero
 type: software
 url: https://github.com/papis/papis-zotero
