--- a/papis/2016-zaner-bloser-handwriting/info.yaml
+++ b/papis/2016-zaner-bloser-handwriting/info.yaml
@@ -4,16 +4,15 @@ author_list:
   given: ''
 file: Zaner-Bloser-Handwriting.kra:/home/inom/Projects/main/wiki/books/Art and Design/Zaner-Bloser-Handwriting.kra:application/x-krita;Zaner-Bloser-Handwriting.pdf:/home/inom/Projects/main/wiki/books/Art
   and Design/Zaner-Bloser-Handwriting.pdf:application/pdf
-files:
-- zaner-bloser-handwriting.kra.zip
-- zaner-bloser-handwriting-a.pdf
+files: []
 isbn: 978-0-7367-6949-5
 keywords: active
 language: en
 papis_id: aaea7afd6f2c68ccb1ca7b322c13ea1d
 publisher: Zaner-Bloser, Incorporated
 ref: HandwritingZaner
-title: Handwriting
 shorttitle: Handwriting
+time-added: 2023-06-22-01:10:24
+title: Handwriting
 type: book
 year: 2016
