--- a/papis/2023-koreader-team-koreader-user-guide/info.yaml
+++ b/papis/2023-koreader-team-koreader-user-guide/info.yaml
@@ -1,9 +1,10 @@
 author: KOReader Team
 files:
-- koreader-user-guide.pdf
+- 2023-koreader-team-koreader-user-guide.pdf
 notes: notes.md
 papis_id: df9e09ce903e517109bcf2996d77d2f6
 ref: KoreaderUserGKoread2023
-time-added: 2023-06-18-23:29:01
+time-added: 2023-06-22-00:27:51
 title: KOReader User Guide
+shorttitle: KOReader User Guide
 year: '2023'
