--- a/papis/4ed80dd50cfd3a58160cbb6707254d12/info.yaml
+++ b/papis/4ed80dd50cfd3a58160cbb6707254d12/info.yaml
@@ -6,5 +6,8 @@ notes: notes.md
 papis_id: bc09823bf1f5eb8f39fb35ecae47323c
 ref: None
 time-added: 2023-06-02-01:27:34
-title: None
+title: 'How Does the Internet Work?'
+shorttitle: 'How Does the Internet Work?'
 url: https://web.stanford.edu/class/msande91si/www-spr04/readings/week1/InternetWhitepaper.htm
+year: 2002
+author: Shuler, Rus
