--- a/papis/5aee9141341f0446db43774cc7c61657/info.yaml
+++ b/papis/5aee9141341f0446db43774cc7c61657/info.yaml
@@ -8,5 +8,8 @@ papis_id: 6057b8835b80096e4259dc3fd932bf94
 ref: BlenderBeginne
 time-added: 2023-06-05-23:34:23
 title: Blender Beginner Donut Tutorial
+shorttitle: Donut Tutorial
 type: website
 url: http://www.youtube.com/playlist?list=PLjEaoINr3zgFX8ZsChQVQsuDSjEqdWMAD
+year: 2022
+
