--- a/papis/677bed66c009b7bde676ad877be7758d-djirdeh-hassan/info.yaml
+++ b/papis/677bed66c009b7bde676ad877be7758d-djirdeh-hassan/info.yaml
@@ -21,6 +21,7 @@ papis_id: 314f1c1b17fe6a6f53db5471974d584c
 publisher: leanpub.com
 ref: FullstackVueJDjirde2021
 title: Fullstack Vue.Js
+shorttitle: Fullstack Vue.Js
 type: book
 volume: '1'
 year: '2021'
