--- a/papis/aabfa212b360ace00b30ea98b5b2aba1-interviewcake/info.yaml
+++ b/papis/aabfa212b360ace00b30ea98b5b2aba1-interviewcake/info.yaml
@@ -15,6 +15,8 @@ notes: notes.md
 papis_id: 0daefa57b840eab3fca8c884880b34f6
 ref: CodingIntervieInterv
 title: Coding Interview Practice
+shorttitle: Coding Interview Practice
 type: misc
 url: https://www.interviewcake.com/table-of-contents
 urldate: '2023-01-10'
+year: 2022
