--- a/papis/d6ecfc65bb43da6336f0d6593071cbd8-hunt-andrew-and-tho/info.yaml
+++ b/papis/d6ecfc65bb43da6336f0d6593071cbd8-hunt-andrew-and-tho/info.yaml
@@ -46,7 +46,7 @@ notes: notes.md
 papis_id: 91f551248fb3fa1615df053eaffdd2a4
 publisher: Addison-Wesley Professional
 ref: ThePragmaticPHunt2019
-shorttitle: The {Pragmatic} {Programmer}
+shorttitle: The Pragmatic Programmer
 title: 'The Pragmatic Programmer: Your Journey to Mastery'
 type: book
 url: https://books.google.kg/books?id=-8pXyQEACAAJ
