--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,27 @@
 {
-  "overrides": [
-    {
-      "files": ["*.md"],
-      "options": {
-        "printWidth": 80
-      }
-    }
-  ]
+    "overrides": [
+        {
+            "files": [
+                "*.md"
+            ],
+            "options": {
+                "arrowParens": "always",
+                "bracketSameLine": false,
+                "bracketSpacing": true,
+                "embeddedLanguageFormatting": "off",
+                "htmlWhitespaceSensitivity": "css",
+                "insertPragma": false,
+                "jsxSingleQuote": false,
+                "printWidth": 80,
+                "proseWrap": "always",
+                "quoteProps": "as-needed",
+                "requirePragma": false,
+                "semi": true,
+                "singleAttributePerLine": false,
+                "singleQuote": false,
+                "tabWidth": 2,
+                "useTabs": false
+            }
+        }
+    ]
 }
